# rtsp_client

./: .gitignore  readme.md  release-note.md
src/: CMakeLists.txt
src/assets/live555/lib/Release/: live555.lib
src/assets/live555/lib/cmake/live555/: live555Config-release.cmake  live555Config.cmake  live555ConfigVersion.cmake
src/main/: CMakeLists.txt  audiodecoder.cpp  audiodecoder.h  audiorenderer.cpp  audiorenderer.h  audioresamplingstate.cpp  audioresamplingstate.h  audiosink.cpp  audiosink.h  basertspclient.cpp  basertspclient.h  dx11manager.cpp  ffmpegdecoder.cpp  ffmpegdecoder.h  framecontainer.cpp  framecontainer.h  framequeue.cpp  framequeue.h  main.cpp  myavpacketlist.h  options.h  packetqueue.cpp  packetqueue.h  rtspcontroller.cpp  rtspcontroller.h  stdafx.h  streamclientstate.cpp  streamclientstate.h  stringhelper.h  videodecoder.cpp  videodecoder.h  videopicture.h  videoreader.cpp  videoreader.h  videorenderer.cpp  videorenderer.h  videosink.cpp  videosink.h  videostate.cpp  videostate.h  (+1 more)
test/01_movie_only_decode/: CMakeLists.txt
test/01_movie_only_decode/main/: CMakeLists.txt  main.cpp  packetqueue.h  stringhelper.h  videodecoder.cpp  videopicture.cpp  videopicture.h  videoreader.cpp  videoreader.h  videorenderer.cpp
test/02_example_rtspclient/: CMakeLists.txt  readme.md
test/02_example_rtspclient/main/: CMakeLists.txt  dummysink.cpp  dummysink.h  main.cpp  myrtspclient.cpp  myrtspclient.h  sdlvideosink.cpp  sdlvideosink.h  streamclientstate.cpp  streamclientstate.h
